[gd_scene load_steps=11 format=3 uid="uid://tebj2ifw0ndr"]

[ext_resource type="Script" uid="uid://dbpia2lo5d0ai" path="res://scripts/Whole game/Choose mode/campaign/Core gameplay/keyboard.gd" id="1_ssikh"]
[ext_resource type="FontFile" uid="uid://bydb56m61wcli" path="res://assets/KeyboardAssets/upheavtt.ttf" id="2_qfr70"]
[ext_resource type="Texture2D" uid="uid://cea784rj83t5m" path="res://assets/KeyboardAssets/keydesignhover.png" id="3_7egs6"]
[ext_resource type="Texture2D" uid="uid://b2q624puu7qib" path="res://assets/KeyboardAssets/keydesignpressed.png" id="4_hcxtj"]
[ext_resource type="Texture2D" uid="uid://c6uhw501l5wvn" path="res://assets/KeyboardAssets/Keydesign.png" id="5_x3a55"]
[ext_resource type="AudioStream" uid="uid://qeei8173flk2" path="res://Unpacking/keyboard-click-327728.mp3" id="6_qfr70"]

[sub_resource type="LabelSettings" id="LabelSettings_gnjq6"]
font_size = 50

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8t13d"]
texture = ExtResource("3_7egs6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_se432"]
texture = ExtResource("4_hcxtj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_msmor"]
texture = ExtResource("5_x3a55")

[node name="Keyboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ssikh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
text = "5"
label_settings = SubResource("LabelSettings_gnjq6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 7

[node name="Button1" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "2"

[node name="Button3" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "3"

[node name="Buttonbackspace" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "<-"

[node name="Buttonplus" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "+"

[node name="Buttonminus" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "-"

[node name="Buttonx" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "x"

[node name="Button4" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "4"

[node name="Button5" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "5"

[node name="Button6" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "6"

[node name="Button0" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "0"

[node name="Buttongreaterthan" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = ">"

[node name="Buttonlessthan" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "<"

[node name="Buttony" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "y"

[node name="Button7" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "7"

[node name="Button8" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "8"

[node name="Button9" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "9"

[node name="ButtonOK" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "OK"

[node name="Buttonequal" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "="

[node name="Buttonraised" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "a^"

[node name="Buttonparenthesis" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_qfr70")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_8t13d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_se432")
theme_override_styles/normal = SubResource("StyleBoxTexture_msmor")
text = "()"

[node name="Button_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qfr70")
volume_db = -10.0

[connection signal="pressed" from="VBoxContainer/GridContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Buttonbackspace" to="." method="_on_button_backspace_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Buttonplus" to="." method="_on_buttonplus_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Buttonminus" to="." method="_on_buttonminus_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Buttonx" to="." method="_on_buttonx_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button0" to="." method="_on_button_0_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Buttongreaterthan" to="." method="_on_buttongreaterthan_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Buttonlessthan" to="." method="_on_buttonlessthan_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Buttony" to="." method="_on_buttony_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ButtonOK" to="." method="_on_button_ok_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Buttonequal" to="." method="_on_buttonequal_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Buttonraised" to="." method="_on_button_raised_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Buttonparenthesis" to="." method="_on_button_parenthesis_pressed"]
